# src/model/api/externalStorage/IExternalStorageApiModel.ts
@@ -2,4 +2,5 @@ import * as apid from '../../../../api';
 
 export default interface IExternalStorageApiModel {
     getList(): apid.ExternalStorageList;
+    getFiles(storageName: string, subPath: string): Promise<apid.ExternalStorageFileList>;
 }
